2014-08-21  Till Kamppeter <till.kamppeter@gmail.com>

	* Clean trailing white space from PPD file lines to
          avoid a segfault caused by it (Bug #1227). Thanks to
	  Jörg Frings-Fürst for the patch.

2012-07-02  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.17.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.17.

	* foomaticrip.h: Raised PATH_MAX to 65536 bytes so that CUPS
	  filter calls with many command line options work (Ubuntu bug
	  #1019662).

2012-06-25  Jiri Popelka <jpopelka@redhat.com>

	* options.c, renderer.c: Fixed problems discovered by a Coverity scan
	  (Bug #752).

2012-06-18  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.16.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.16.

	* foomaticrip.c: Fixed wrong access to command line option list which
	  prevented the command line options being passed on to the pdftops
	  CUPS filter when incoming PDF is converted to PostScript (Ubuntu
	  bug #1002699).

2012-06-06  Till Kamppeter <till.kamppeter@gmail.com>

	* spooler.c: Fixed off-by-one bug which has cut off the last character
	  of the option string for CUPS (5th command line argument) and so made
	  the last option setting not being applied (Ubuntu bug #1003194).

2012-03-23  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.15.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.15.

	* options.c: Improved check whether a driver works with PDF input data:
	  Do not take into account bogus options which appear due to bugs in
	  PPD files (type is TYPE_NONE) or composite options and in addition
	  add debug output to show the reason for the decision to convert to
	  PostScript (Ubuntu bugs #953962 and #960989).

2012-03-14  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.14.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.14.
