@@ -5,8 +5,8 @@
 
 # Enter here your personal command for converting non-PostScript files
 # (especially text) to PostScript. Supported commands are "a2ps",
-# "enscript" or "mpage". Command line options will be automatically
-# set by "foomatic-rip".
+# "enscript", "mpage" or "paps". Command line options will be
+# automatically set by "foomatic-rip".
 
 # textfilter: a2ps
 
